--- a/deploy_analysis/03_Deploy_Decoder_with_EWM_Generator.ipynb
+++ b/deploy_analysis/03_Deploy_Decoder_with_EWM_Generator.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(1, '/home/kseuro/Kai/deeplearnphysics/pytorch/particle_generator/')\n",
+    "sys.path.insert(1, '/home/plutku01/projects/particle_generator/')\n",
     "\n",
-    "# Meitner Machine\n",
+    "# Mayer Machine\n",
     "import ae\n",
     "import conv_ae\n",
     "import ewm\n",
@@ -49,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Which is best on Mayer?\n",
     "device = torch.device(1)"
    ]
   },
@@ -65,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_root = \"/media/hdd1/kai/particle_generator/experiments/\""
+    "exp_root = \"/home/plutku01/projects/particle_generator/experiments/\""
    ]
   },
   {
@@ -410,10 +411,13 @@
    "outputs": [],
    "source": [
     "if 'conv' in AE_root:\n",
+    "    code = l_dim\n",
+    "    '''\n",
     "    x = torch.randn(1, 1, im_dim, im_dim).to(device)\n",
     "    x = model.encoder(x)\n",
     "    code = (x.shape[1], x.shape[2], x.shape[3])\n",
-    "    print(\"Code tensor volume is: [{} x {} x {}] = {}\".format(code[0], code[1], code[2], code[0]*code[1]*code[2]))"
+    "    '''\n",
+    "    print(\"Code vector size is: {}\".format(code) # \"[{} x {} x {}] = {}\".format(code[0], code[1], code[2], code[0]*code[1]*code[2]))"
    ]
   },
   {
@@ -477,7 +481,7 @@
    "source": [
     "# Model kwargs\n",
     "fc_sizes = [n_hidden] * n_layers\n",
-    "ewm_kwargs = { 'z_dim': z_dim, 'fc_sizes': fc_sizes, 'n_out': code[0]*code[1]*code[2]}\n",
+    "ewm_kwargs = { 'z_dim': z_dim, 'fc_sizes': fc_sizes, 'n_out': code} #code[0]*code[1]*code[2]}\n",
     "# fc_sizes = [512] * 4\n",
     "# ewm_kwargs = { 'z_dim': 100, 'fc_sizes': fc_sizes, 'n_out': 384}"
    ]
@@ -585,7 +589,7 @@
     "if 'mlp' in AE_root:\n",
     "    ae_l_dim = AE.encoder.last.out_features\n",
     "else:\n",
-    "    ae_l_dim = code[0]*code[1]*code[2]\n",
+    "    ae_l_dim = code # code[0]*code[1]*code[2]\n",
     "g_out_dim = G.out[0].out_features"
    ]
   },
@@ -627,9 +631,12 @@
    "source": [
     "in_f  = model.decoder.deconv_blocks[0][2].in_channels\n",
     "out_f = model.decoder.deconv_blocks[0][2].out_channels\n",
+    "d = code\n",
+    "'''\n",
     "h = code[1]\n",
     "w = code[2]\n",
-    "print('[{},{},{},{}]'.format(in_f, out_f, h, w))"
+    "'''\n",
+    "print('[{},{},{},{}]'.format(in_f, out_f, d) # h, w))"
    ]
   },
   {
@@ -796,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
