--- a/deploy_analysis/01_AutoEncoder_Evaluation.ipynb
+++ b/deploy_analysis/01_AutoEncoder_Evaluation.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +159,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "\n",
+      "0: 07-20-2020_10-49-24_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "1: 07-20-2020_11-25-28_conv_ae_200_epochs_LArCV_64_dataset_512_l-dim \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "2: 07-23-2020_11-37-09_conv_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "3: 07-13-2020_13-56-21_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
+      "\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"-\"*60)\n",
     "for i in range(len(exp_paths)):\n",
@@ -179,18 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_dir = exp_paths[0]"
+    "exp_dir = exp_paths[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment path set as: \n",
+      "/home/plutku01/projects/particle_generator/experiments/larcv_ae/conv_ae/07-23-2020_11-37-09_conv_ae_100_epochs_LArCV_64_dataset_512_l-dim/\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the full path to the experiment\n",
     "exp_path = os.path.join(exp_root, exp_dir) + \"/\"\n",
@@ -199,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,9 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 64 4096 64\n"
+     ]
+    }
+   ],
    "source": [
     "print(n_layers, depth, im_size, im_dim)"
    ]
@@ -272,9 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 test data will be loaded from: \n",
+      "/home/plutku01/data/LArCV/test/larcv_png_64/\n"
+     ]
+    }
+   ],
    "source": [
     "test_data = \"/home/plutku01/data/LArCV/test/larcv_png_{}/\".format(im_dim)\n",
     "num_test_ex = sum( [len(examples) for _, _, examples in os.walk(test_data)] )\n",
@@ -290,9 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 reference training data will be loaded from: \n",
+      "/home/plutku01/data/LArCV/train/train_reference/larcv_png_64/\n"
+     ]
+    }
+   ],
    "source": [
     "train_data = \"/home/plutku01/data/LArCV/train/train_reference/larcv_png_{}/\".format(im_dim)\n",
     "num_train_ex = sum( [len(examples) for _, _, examples in os.walk(train_data)] )\n",
@@ -308,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image conversion flag is: L\n",
+      "Images will be loaded from subfolder of: /home/plutku01/data/LArCV/test/larcv_png_64/\n"
+     ]
+    }
+   ],
    "source": [
     "if mnist:\n",
     "    data_root = \"/home/plutku01/projects/particle_generator/data/\"\n",
@@ -339,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,18 +419,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.utils.data.dataloader.DataLoader"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(test_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image conversion flag is: L\n",
+      "Images will be loaded from subfolder of: /home/plutku01/data/LArCV/train/train_reference/larcv_png_64/\n"
+     ]
+    }
+   ],
    "source": [
     "if mnist:\n",
     "    pass\n",
@@ -372,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,9 +510,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model l_dim: 512\n",
+      "Encoder depth: [1, 8, 16, 32, 64]\n",
+      "Decoder depth: [64, 32, 16, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Model l_dim: {}\".format(l_dim))\n",
     "print(\"Encoder depth: {}\".format(ae_kwargs['enc_depth']))\n",
@@ -440,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,9 +599,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "\n",
+      "0: best_conv_ae_ep_99.tar \n",
+      "\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"-\"*60)\n",
     "for i in range(len(checkpoint_names)):\n",
@@ -522,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +685,7 @@
     "if 'mlp' in exp_path:\n",
     "    model = ae.AutoEncoder(**ae_kwargs).to(device)\n",
     "else:\n",
-    "    model = res_ae.ResAutoEncoder(**ae_kwargs).to(device)"
+    "    model = conv_ae.ConvAutoEncoder(**ae_kwargs).to(device)"
    ]
   },
   {
@@ -587,11 +697,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for ConvAutoEncoder:\n\tsize mismatch for decoder.deconv_blocks.2.2.weight: copying a param with shape torch.Size([4, 16, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 16, 3, 3]).\n\tsize mismatch for decoder.deconv_blocks.2.2.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-4095f9f1909f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'state_dict'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m    843\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    844\u001b[0m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0;32m--> 845\u001b[0;31m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0m\u001b[1;32m    846\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    847\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for ConvAutoEncoder:\n\tsize mismatch for decoder.deconv_blocks.2.2.weight: copying a param with shape torch.Size([4, 16, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 16, 3, 3]).\n\tsize mismatch for decoder.deconv_blocks.2.2.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1])."
+     ]
+    }
+   ],
    "source": [
     "model.load_state_dict(checkpoint['state_dict'], strict=False)"
    ]
@@ -848,7 +971,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del model"
+    "#del model"
    ]
   },
   {
@@ -887,7 +1010,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# Save figure\n",
-    "save_file = \"{}_{}_{}.png\".format(m_label, im_dim, code) #*code[1]*code[2])\n",
+    "save_file = \"{}_{}_{}.png\".format(m_label, im_dim, code)# code[0]*code[1]*code[2])\n",
     "plt.savefig(save_file, dpi=300)"
    ]
   },
@@ -921,7 +1044,7 @@
     "if 'mlp' in exp_path:\n",
     "    label = \"{}x{} Dataset | {} Dimensional Code Vector\".format(im_dim, im_dim, l_dim)\n",
     "else:\n",
-    "    label = \"{}x{} Dataset | {} Dimensional Code Vector\".format(im_dim, im_dim, code)#[0], code[1], code[2])"
+    "    label = \"{}x{} Dataset | {} Dimensional Code Vector\".format(im_dim, im_dim, code)# [0], code[1], code[2])"
    ]
   },
   {
@@ -934,7 +1057,7 @@
     "if 'mlp' in exp_path:\n",
     "    save_file = \"training_loss_MLP_AE_{}_dataset_{}_l-dim.png\".format(im_dim, l_dim)\n",
     "else:\n",
-    "    save_file = \"training_loss_Conv_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code) #[0], code[1], code[2])"
+    "    save_file = \"training_loss_Conv_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code)# [0], code[1], code[2])"
    ]
   },
   {
@@ -1019,7 +1142,7 @@
     "if 'mlp' in exp_path:\n",
     "    label = \"{}x{} Dataset | {} Dimensional Code Vector\".format(im_dim, im_dim, l_dim)\n",
     "else:\n",
-    "    label = \"{}x{} Dataset | {} Dimensional Code Vector\".format(im_dim, im_dim, code)#[0], code[1], code[2])"
+    "    label = \"{}x{} Dataset | {} Dimensional Code Vector\".format(im_dim, im_dim, code)# [0], code[1], code[2])"
    ]
   },
   {
@@ -1264,7 +1387,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# Save figure\n",
-    "save_file = \"{}_{}_{}.png\".format('test-loss-peak', im_dim, code[0]*code[1]*code[2])\n",
+    "save_file = \"{}_{}_{}.png\".format('test-loss-peak', im_dim, code)# code[0]*code[1]*code[2])\n",
     "plt.savefig(save_file, dpi=300)"
    ]
   },
@@ -1317,7 +1440,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# Save figure\n",
-    "save_file = \"{}_{}_{}.png\".format('test-highest-losses', im_dim, code[0]*code[1]*code[2])\n",
+    "save_file = \"{}_{}_{}.png\".format('test-highest-losses', im_dim, code) #code[0]*code[1]*code[2])\n",
     "plt.savefig(save_file, dpi=300)"
    ]
   },
@@ -1396,7 +1519,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# Save figure\n",
-    "save_file = \"{}_{}_{}.png\".format('train-loss-peak', im_dim, code[0]*code[1]*code[2])\n",
+    "save_file = \"{}_{}_{}.png\".format('train-loss-peak', im_dim, code)# code[0]*code[1]*code[2])\n",
     "plt.savefig(save_file, dpi=300)"
    ]
   },
@@ -1442,7 +1565,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# Save figure\n",
-    "save_file = \"{}_{}_{}.png\".format('train-highest-losses', im_dim, code[0]*code[1]*code[2])\n",
+    "save_file = \"{}_{}_{}.png\".format('train-highest-losses', im_dim, code)# code[0]*code[1]*code[2])\n",
     "plt.savefig(save_file, dpi=300)"
    ]
   },
