cleanup/ewm ckpt training

--- a/deploy_analysis/01_AutoEncoder_Evaluation.ipynb
+++ b/deploy_analysis/01_AutoEncoder_Evaluation.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_class = {'mlp': 'mlp_ae/', 'conv':'conv_ae/'}"
+    "model_class = {'mlp': 'mlp_ae/', 'conv':'conv_ae/', 'res':'res_ae/'}"
    ]
   },
   {
@@ -124,10 +124,12 @@
    "outputs": [],
    "source": [
     "mnist = False\n",
+    "model_type = 'res'\n",
     "if mnist:\n",
     "    model_folder = 'mnist_ae/'\n",
-    "else:\n",
-    "    model_folder = \"larcv_ae/\" + model_class['conv']"
+    "elif :\n",
+    "    model_folder = \"larcv_ae/\" + model_class[model_type]\n",
+    "    "
    ]
   },
   {
@@ -684,8 +686,10 @@
     "# Set up model on GPU\n",
     "if 'mlp' in exp_path:\n",
     "    model = ae.AutoEncoder(**ae_kwargs).to(device)\n",
-    "else:\n",
-    "    model = conv_ae.ConvAutoEncoder(**ae_kwargs).to(device)"
+    "elif model_type == 'conv':\n",
+    "    model = conv_ae.ConvAutoEncoder(**ae_kwargs).to(device)\n",
+    "elif model_type == 'res'\n",
+    "    model = res_ae.ResAutoEncoder(**ae_kwargs).to(device)"
    ]
   },
   {
@@ -994,8 +998,10 @@
     "# Set title\n",
     "if 'mlp' in exp_path:\n",
     "    m_label = 'AE_test_set_checkpoint_{}'.format(checkpoint_label)\n",
-    "else:\n",
+    "elif model_type == 'conv':\n",
     "    m_label = 'Conv_AE_test_set_checkpoint_{}'.format(checkpoint_label)\n",
+    "elif model_type == 'res':\n",
+    "    m_label = 'Res_AE_test_set_checkpoint_{}'.format(checkpoint_label)\n",
     "\n",
     "# Generate plot\n",
     "for images, row in zip([test_ims, samples], axes):\n",
@@ -1030,8 +1036,10 @@
     "# Compute the plot title\n",
     "if 'mlp' in exp_path:\n",
     "    title = \"MLP AutoEncoder Training Loss\" \n",
-    "else:\n",
-    "    title = \"Convolutional AutoEncoder Training Loss\""
+    "elif model_type == 'conv':\n",
+    "    title = \"Convolutional AutoEncoder Training Loss\"\n",
+    "elif model_type == 'res':\n",
+    "    title = \"Residual AutoEncoder Training Loss\""
    ]
   },
   {
@@ -1056,8 +1064,10 @@
     "# Compute the file name for saving\n",
     "if 'mlp' in exp_path:\n",
     "    save_file = \"training_loss_MLP_AE_{}_dataset_{}_l-dim.png\".format(im_dim, l_dim)\n",
-    "else:\n",
-    "    save_file = \"training_loss_Conv_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code)# [0], code[1], code[2])"
+    "elif model_type == 'conv':\n",
+    "    save_file = \"training_loss_Conv_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code)# [0], code[1], code[2])\n",
+    "elif model_type == 'res':\n",
+    "    save_file = \"training_loss_Res_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code)"
    ]
   },
   {
@@ -1128,8 +1138,10 @@
     "# Compute the plot title\n",
     "if 'mlp' in exp_path:\n",
     "    title = \"MLP AutoEncoder Checkpoint Evaluation\" \n",
-    "else:\n",
-    "    title = \"Convolutional AutoEncoder Checkpoint Evaluation\""
+    "elif model_type == 'conv':\n",
+    "    title = \"Convolutional AutoEncoder Checkpoint Evaluation\"\n",
+    "elif model_type == 'res':\n",
+    "    title = \"Residual AutoEncoder Checkpoint Evaluation\""
    ]
   },
   {
@@ -1154,8 +1166,10 @@
     "# Compute the file name for saving\n",
     "if 'mlp' in exp_path:\n",
     "    save_file = \"checkpoint_eval_MLP_AE_{}_dataset_{}_l-dim.png\".format(im_dim, l_dim)\n",
-    "else:\n",
-    "    save_file = \"checkpoint_eval_Conv_AE_{}_dataset_{}_code-volume.png\".format(im_dim, code)#[0], code[1], code[2])"
+    "elif model_type == 'conv':\n",
+    "    save_file = \"checkpoint_eval_Conv_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code)#[0], code[1], code[2])\n",
+    "elif model_type == 'res':\n",
+    "    save_file = \"checkpoint_eval_Res_AE_{}_dataset_{}_code-vector.png\".format(im_dim, code)"
    ]
   },
   {
