VAE/MNIST compat.

--- a/deploy_analysis/02_AutoEncoder_Code_Vector_Target_Generation.ipynb
+++ b/deploy_analysis/02_AutoEncoder_Code_Vector_Target_Generation.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_class = {'mlp': 'mlp_ae/', 'conv':'conv_ae/'}"
+    "model_class = {'mlp': 'mlp_ae/', 'conv':'conv_ae/', 'res':'res_ae/'}"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_folder = \"larcv_ae/\" + model_class['conv']"
+    "model_folder = \"larcv_ae/\" + model_class['res']"
    ]
   },
   {
@@ -157,19 +157,15 @@
       "\n",
       "------------------------------------------------------------\n",
       "\n",
-      "1: 07-22-2020_12-34-43_res_ae_500_epochs_LArCV_64_dataset_512_l-dim \n",
+      "1: 08-20-2020_07-59-37_res_ae_200_epochs_LArCV_64_dataset_512_l-dim \n",
       "\n",
       "------------------------------------------------------------\n",
       "\n",
-      "2: 07-20-2020_11-25-28_conv_ae_200_epochs_LArCV_64_dataset_512_l-dim \n",
+      "2: 08-13-2020_06-45-15_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
       "\n",
       "------------------------------------------------------------\n",
       "\n",
-      "3: 08-13-2020_06-45-15_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      "4: 07-13-2020_13-56-21_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
+      "3: 08-27-2020_00-26-10_res_ae_1000_epochs_LArCV_64_dataset_512_l-dim \n",
       "\n",
       "------------------------------------------------------------\n"
      ]
@@ -209,7 +205,7 @@
      "output_type": "stream",
      "text": [
       "Experiment path set as: \n",
-      "/home/plutku01/projects/particle_generator/experiments/larcv_ae/conv_ae/08-13-2020_06-45-15_res_ae_100_epochs_LArCV_64_dataset_512_l-dim/\n"
+      "/home/plutku01/projects/particle_generator/experiments/larcv_ae/res_ae/08-27-2020_00-26-10_res_ae_1000_epochs_LArCV_64_dataset_512_l-dim/\n"
      ]
     }
    ],
@@ -293,12 +289,12 @@
      "output_type": "stream",
      "text": [
       "10000 test data will be loaded from: \n",
-      "/home/plutku01/data/LArCV/test/single_particle/larcv_png_64/\n"
+      "/home/plutku01/data/cv/single_particle/test/larcv_png_64/\n"
      ]
     }
    ],
    "source": [
-    "test_data = \"/home/plutku01/data/LArCV/test/single_particle/larcv_png_{}/\".format(im_dim)\n",
+    "test_data = \"/home/plutku01/data/cv/single_particle/test/larcv_png_{}/\".format(im_dim)\n",
     "num_test_ex = sum( [len(examples) for _, _, examples in os.walk(test_data)] )\n",
     "print(\"{} test data will be loaded from: \\n{}\".format(num_test_ex, test_data))"
    ]
@@ -320,12 +316,12 @@
      "output_type": "stream",
      "text": [
       "10000 training data will be loaded from: \n",
-      "/home/plutku01/data/LArCV/train/single_particle/train_reference/larcv_png_64/\n"
+      "/home/plutku01/data/cv/single_particle/train/train_reference/larcv_png_64/\n"
      ]
     }
    ],
    "source": [
-    "train_data = \"/home/plutku01/data/LArCV/train/single_particle/train_reference/larcv_png_{}/\".format(im_dim)\n",
+    "train_data = \"/home/plutku01/data/cv/single_particle/train/train_reference/larcv_png_{}/\".format(im_dim)\n",
     "num_train_ex = sum( [len(examples) for _, _, examples in os.walk(train_data)] )\n",
     "print(\"{} training data will be loaded from: \\n{}\".format(num_train_ex, train_data))"
    ]
@@ -365,7 +361,7 @@
      "output_type": "stream",
      "text": [
       "Image conversion flag is: L\n",
-      "Images will be loaded from subfolder of: /home/plutku01/data/LArCV/test/single_particle/larcv_png_64/\n"
+      "Images will be loaded from subfolder of: /home/plutku01/data/cv/single_particle/test/larcv_png_64/\n"
      ]
     }
    ],
@@ -392,7 +388,7 @@
      "output_type": "stream",
      "text": [
       "Image conversion flag is: L\n",
-      "Images will be loaded from subfolder of: /home/plutku01/data/LArCV/train/single_particle/train_reference/larcv_png_64/\n"
+      "Images will be loaded from subfolder of: /home/plutku01/data/cv/single_particle/train/train_reference/larcv_png_64/\n"
      ]
     }
    ],
@@ -516,7 +512,39 @@
      "text": [
       "------------------------------------------------------------\n",
       "\n",
-      "0: best_res_ae_ep_99.tar \n",
+      "0: best_res_ae_ep_600.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "1: best_res_ae_ep_800.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "2: best_res_ae_ep_900.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "3: best_res_ae_ep_750.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "4: best_res_ae_ep_850.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "5: best_res_ae_ep_700.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "6: best_res_ae_ep_650.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "7: best_res_ae_ep_999.tar \n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "8: best_res_ae_ep_950.tar \n",
       "\n",
       "------------------------------------------------------------\n"
      ]
@@ -544,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = 0\n",
+    "index = 7\n",
     "current_checkpoint = checkpoint_names[index]\n",
     "current_checkpoint_label = checkpoint_name_labels[index]"
    ]
@@ -863,7 +891,7 @@
     }
    ],
    "source": [
-    "if 'conv' in exp_path:\n",
+    "if 'conv' or 'res' in exp_path:\n",
     "    code_size = l_dim\n",
     "    '''\n",
     "    x = torch.randn(1, 1, im_dim, im_dim).to(device)\n",
