--- a/deploy_analysis/03_Deploy_Decoder_with_EWM_Generator.ipynb
+++ b/deploy_analysis/03_Deploy_Decoder_with_EWM_Generator.ipynb
@@ -90,7 +90,7 @@
     "    AE_root = exp_root + 'larcv_ae/mlp_ae/'\n",
     "    EWM_root = exp_root + 'ewm_models/mlp_ewm/'\n",
     "else:\n",
-    "    AE_root = exp_root + 'larcv_ae/conv_ae/'\n",
+    "    AE_root = exp_root + 'larcv_ae/' + model_type + '_ae/'\n",
     "    EWM_root = exp_root + 'ewm_models/conv_ewm/'"
    ]
   },
@@ -133,15 +133,11 @@
       "\n",
       "------------------------------------------------------------\n",
       "\n",
-      " Exp_1: 07-22-2020_12-34-43_res_ae_500_epochs_LArCV_64_dataset_512_l-dim \n",
+      " Exp_1: 08-20-2020_07-59-37_res_ae_200_epochs_LArCV_64_dataset_512_l-dim \n",
       "\n",
       "------------------------------------------------------------\n",
       "\n",
-      " Exp_2: 07-20-2020_11-25-28_conv_ae_200_epochs_LArCV_64_dataset_512_l-dim \n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      " Exp_3: 07-13-2020_13-56-21_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
+      " Exp_2: 08-13-2020_06-45-15_res_ae_100_epochs_LArCV_64_dataset_512_l-dim \n",
       "\n",
       "------------------------------------------------------------\n"
      ]
@@ -172,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AE_dir = AE_paths[0]"
+    "AE_dir = AE_paths[1]"
    ]
   },
   {
@@ -185,7 +181,7 @@
      "output_type": "stream",
      "text": [
       "Path to AutoEncoder set as: \n",
-      "/home/plutku01/projects/particle_generator/experiments/larcv_ae/conv_ae/07-20-2020_10-49-24_res_ae_100_epochs_LArCV_64_dataset_512_l-dim/\n"
+      "/home/plutku01/projects/particle_generator/experiments/larcv_ae/res_ae/08-20-2020_07-59-37_res_ae_200_epochs_LArCV_64_dataset_512_l-dim/\n"
      ]
     }
    ],
@@ -213,15 +209,11 @@
      "text": [
       "------------------------------------------------------------\n",
       "\n",
-      " Exp_0: 08-07-2020_13-59-31_ewm_conv_10_epochs_LArCV_64_dataset \n",
+      " Exp_0: 08-20-2020_09-25-07_ewm_100_epochs_Code_Vectors_64_512 \n",
       "\n",
       "------------------------------------------------------------\n",
       "\n",
-      " Exp_1: 08-07-2020_13-01-03_ewm_100_epochs_Code_Vectors_64_512 \n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      " Exp_2: 08-10-2020_12-08-12_ewm_conv_10_epochs_LArCV_64_dataset \n",
+      " Exp_1: 08-13-2020_09-18-28_ewm_100_epochs_Code_Vectors_64_512 \n",
       "\n",
       "------------------------------------------------------------\n"
      ]
@@ -253,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EWM_dir = EWM_paths[2]"
+    "EWM_dir = EWM_paths[0]"
    ]
   },
   {
@@ -266,7 +258,7 @@
      "output_type": "stream",
      "text": [
       "Path to EWM Generator Model set as: \n",
-      "/home/plutku01/projects/particle_generator/experiments/ewm_models/conv_ewm/evaluated_models/08-10-2020_12-08-12_ewm_conv_10_epochs_LArCV_64_dataset/\n"
+      "/home/plutku01/projects/particle_generator/experiments/ewm_models/conv_ewm/evaluated_models/08-20-2020_09-25-07_ewm_100_epochs_Code_Vectors_64_512/\n"
      ]
     }
    ],
@@ -360,7 +352,7 @@
     "        \n",
     "    # Update kwarg dicts\n",
     "    # Decoder is the reverse of the encoder\n",
-    "    ae_kwargs = {'enc_depth':[1] + depth, 'dec_depth':depth[1:len(depth)][::-1] + [1],'l_dim':l_dim}"
+    "    ae_kwargs = {'enc_depth':[1] + depth, 'dec_depth':depth[1:len(depth)][::-1] + [1],'l_dim':l_dim,'strides':strides}"
    ]
   },
   {
@@ -373,8 +365,8 @@
      "output_type": "stream",
      "text": [
       "Model l_dim: 512\n",
-      "Encoder depth: [1, 4, 8, 16, 32]\n",
-      "Decoder depth: [32, 16, 8, 1]\n"
+      "Encoder depth: [1, 4, 8, 16, 32, 64]\n",
+      "Decoder depth: [64, 32, 16, 8, 1]\n"
      ]
     }
    ],
@@ -388,19 +380,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'strides'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-4ec1c885c90d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mae\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAutoEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mae_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres_ae\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mResAutoEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mae_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'strides'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up model on GPU\n",
     "if 'mlp' in AE_root:\n",
@@ -418,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,9 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "\n",
+      "0: best_res_ae_ep_199.tar \n",
+      "\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"-\"*60)\n",
     "for i in range(len(AE_checkpoint_names)):\n",
@@ -445,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,9 +458,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for ResAutoEncoder:\n\tUnexpected key(s) in state_dict: \"decoder.double_res.res1.bypass.weight\". \n\tsize mismatch for decoder.res_dec_blocks.3.deconv.weight: copying a param with shape torch.Size([8, 4, 4, 4]) from checkpoint, the shape in current model is torch.Size([8, 1, 4, 4]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.conv1.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.conv2.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.conv1.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.conv2.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.double_res.res1.conv1.weight: copying a param with shape torch.Size([1, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-a65f8103de61>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Note: The IncompatibleKeys(missing_keys=[], unexpected_keys=[]) message indicates that\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#       there were no problems in loading the state dictionary. Bit confusing...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'state_dict'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m    843\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    844\u001b[0m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0;32m--> 845\u001b[0;31m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0m\u001b[1;32m    846\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    847\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for ResAutoEncoder:\n\tUnexpected key(s) in state_dict: \"decoder.double_res.res1.bypass.weight\". \n\tsize mismatch for decoder.res_dec_blocks.3.deconv.weight: copying a param with shape torch.Size([8, 4, 4, 4]) from checkpoint, the shape in current model is torch.Size([8, 1, 4, 4]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.conv1.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn1.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.conv2.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res1.bn2.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.conv1.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn1.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.conv2.weight: copying a param with shape torch.Size([4, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.weight: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.bias: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.running_mean: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.res_dec_blocks.3.res.res2.bn2.running_var: copying a param with shape torch.Size([4]) from checkpoint, the shape in current model is torch.Size([1]).\n\tsize mismatch for decoder.double_res.res1.conv1.weight: copying a param with shape torch.Size([1, 4, 3, 3]) from checkpoint, the shape in current model is torch.Size([1, 1, 3, 3])."
+     ]
+    }
+   ],
    "source": [
     "# Load the model's state dictionary\n",
     "# Note: The IncompatibleKeys(missing_keys=[], unexpected_keys=[]) message indicates that\n",
